# frank-kickstart

./: .gitignore  CMakeLists.txt  README.md  build.sh  convert_images.sh  flash.sh  memmap.frank-kickstart.ld  memmap.kickstarter.ld  release.sh
drivers/: HDMI.c
drivers/libdvi/: CMakeLists.txt  common_dvi_pin_configs.h  dvi.c  dvi.h  dvi_config_defs.h  dvi_serialiser.c  dvi_serialiser.pio  dvi_timing.c  dvi_timing.h  tmds_encode.S  tmds_encode.h
drivers/ps2kbd/: ps2kbd_wrapper.h
drivers/sdcard/: sdcard.c
images/: bk.xml  c64.xml  digger.xml  doom.xml  genesis.xml  heretic.xml  nes.xml  picospec.xml  prince.xml  quake.xml  snes.xml  zxspectrum.xml
release/: frank-kickstart_m1_1_00.uf2  frank-kickstart_m1_1_01.uf2  frank-kickstart_m1_1_02.uf2  frank-kickstart_m1_1_03.uf2  frank-kickstart_m2_1_00.uf2  frank-kickstart_m2_1_01.uf2  frank-kickstart_m2_1_02.uf2  frank-kickstart_m2_1_03.uf2
sdcard/kickstart/: 386.xml  apple.xml  digger.xml  doom.xml  duke3d.xml  heretic.xml  prince.xml  quake.xml  speccyp.xml
src/: board_config.h  fw_boot_redirect.c  main.c  psram_init.c  welcome_data.h
